--- a/pliki/html.html
+++ b/pliki/html.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eko strona</title>
-    <link rel="stylesheet" href="../eko-strona/style/style.css" />
-    <script src="../eko-strona/java_script/script.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
   <body></body>
 </html>
